k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-app
  labels:
    app: coffee-app
spec:
  type: ClusterIP
  selector:
    app: coffee-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
